--- a/Trabalho_1_Tópicos_Astronomia.ipynb
+++ b/Trabalho_1_Tópicos_Astronomia.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Trabalho 1 - Tópicos Astronomia.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyP6UVL4ICJq50naqFhrftwZ",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/wallec/FIS02013-Trabalho_1/blob/main/Trabalho_1_T%C3%B3picos_Astronomia.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -63,7 +75,7 @@
         "Z = R_{S}\\sin b\n",
         "\\end{align}\n",
         "\n",
-        "* Para identificar RGC. seria necessário antes determinar $R_{0}$, a distância do sol ao centro galáctico. Como isso só vai ser feito no final, apenas para fins de preencher os valores faltantes no arquivo, vou usar o valor atualmente aceito $R_{0} = 8$ kpc."
+        "* Para identificar RGC seria necessário antes determinar $R_{0}$, a distância do sol ao centro galáctico. Como isso só vai ser feito no final, apenas para fins de preencher os valores faltantes no arquivo, vou usar o valor atualmente aceito $R_{0} = 8$ kpc."
       ],
       "metadata": {
         "id": "JLK6fGO72mww"
